# VitaGraph-AI

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_GUIDE.md  SOP.md  extract.py  graph.py  hypothesis.py  pyproject.toml  requirements.txt  schemas.py  vitagraph.command
tests/: test_extraction.py  test_graph.py  test_hypothesis.py  test_ingest.py
vitagraph/: agent.py  config.py  main.py  reports.py
vitagraph/core/: extract.py  graph.py  hypothesis.py  ingest_rxiv.py  ingest_scholar.py  schemas.py
